# Pydantic-X

./: MANIFEST.in  README.md  README_UPDATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
examples/: demo_full.py  fastapi_validation_demo.py
pydanticx/: __init__.py  fast.py  models.py  sanitizers.py  versioning.py
tests/: test_fast.py  test_sanitizers.py  test_versioning.py
